--- a/testnuxtjs/package.json
+++ b/testnuxtjs/package.json
@@ -12,5 +12,8 @@
     "@nuxtjs/axios": "^5.12.0",
     "nuxt": "^2.14.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2"
+  }
 }
