--- a/testnuxtjs/package.json
+++ b/testnuxtjs/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "uikit": "^3.5.7"
   },
   "devDependencies": {
     "node-sass": "^4.14.1",
