--- a/testnuxtjs/package.json
+++ b/testnuxtjs/package.json
@@ -2,7 +2,10 @@
   "name": "testnuxtjs",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
+  "engines": {
+    "node": "12.16.3"
+  },
+    "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
