--- a/testnuxtjs/package.json
+++ b/testnuxtjs/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "dev": "nuxt",
+    "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "heroku-postbuild" : "npm run build"
